# SimSpark-SPL

trunk/rcssserver3d/data/rsg/agent/naov4/: nao.rsg  naoneckhead.rsg
trunk/rcssserver3d/plugin/soccer/: CMakeLists.txt  export.cpp
trunk/rcssserver3d/plugin/soccer/beameffector/: beameffector.cpp
trunk/rcssserver3d/plugin/soccer/reseteffector/: resetaction.h  reseteffector.cpp  reseteffector.h  reseteffector_c.cpp
trunk/rcssserver3d/plugin/soccer/soccerbase/: soccerbase.cpp
trunk/rcssserver3d/rcssserver3d/: main.cpp
trunk/spark/lib/oxygen/simulationserver/: netcontrol.h
trunk/spark/plugin/: CMakeLists.txt
trunk/spark/plugin/isfallenperceptor/: CMakeLists.txt  export.cpp  isfallenperceptor.cpp  isfallenperceptor.h  isfallenperceptor_c.cpp
trunk/spark/plugin/rewardperceptor/: CMakeLists.txt  export.cpp  rewardperceptor.cpp  rewardperceptor.h  rewardperceptor_c.cpp
trunk/spark/spark/: spark.rb
